mnist + MLP + bike + transfer

--- a/source/notebooks/MLP.ipynb
+++ b/source/notebooks/MLP.ipynb
@@ -749,9 +749,7 @@
     "        end_ = len(self.layers)\n",
     "        \n",
     "        for i, k in zip(range(0,end_-1), range(init_+1, end_)):\n",
-    "            #print(self.layers[k].activation_name)\n",
     "            dot_product = np.dot(input_, self.weights[k]) + self.biases[k]\n",
-    "            #print(dot_product)\n",
     "            hidden[k] = self.layers[k].activation(dot_product)\n",
     "            primes[k] = self.layers[k].activation_prime(dot_product)\n",
     "            input_ = hidden[k]    \n",
@@ -821,17 +819,7 @@
     "            output_ = self.layers[k].activation(np.dot(input_, self.weights[k]) + self.biases[k])\n",
     "            input_ = output_\n",
     "            \n",
-    "        return output_\n",
-    "    \n",
-    "    def acc(self, X, Y, threshold):\n",
-    "        output_ = self.predict(X)\n",
-    "        predictions = output_ > threshold\n",
-    "     \n",
-    "        return np.mean(predictions == Y)\n",
-    "\n",
-    "      \n",
-    "    def show_acc(self, X, Y, threshold=0.5): \n",
-    "        print(\"Prediction accuracy Train: {:.3f}\".format(self.acc(X, Y, threshold)))           "
+    "        return output_"
    ]
   },
   {
